refact:견적요청 실패 버그, 배너 숨기기 버그 수정 feat:견적삭제기능 추가, 진행상태 변경 기능 추가

--- a/yejo/src/main/resources/templates/main/consultant.html
+++ b/yejo/src/main/resources/templates/main/consultant.html
@@ -282,12 +282,12 @@ function inputNum(obj){
 		                </dd>
 		            </dl>
 		        </div>
-		        <div class="form-box">
+		        <!-- <div class="form-box">
 		            <dl>
 		                <dt><label for="customer_password">*비밀번호</label></dt>
 		                <dd><input type="password" name="passwd" id="customer_password" placeholder="비밀번호를 입력해 주세요." class="form-input" required></dd>
 		            </dl>
-		        </div>
+		        </div> -->
 		    </div>
 		    
 		    <h2 class="form-title"><span class="highlight">*견적 내용</span></h2>
