--- a/yejo/src/main/resources/templates/admin/estimate.html
+++ b/yejo/src/main/resources/templates/admin/estimate.html
@@ -87,9 +87,12 @@
                                             <td th:text="${estimate.spaceType}"></td>
                                             <td th:text="${estimate.name}"></td>
                                             <td th:text="${estimate.tel}"></td>
-                                            <td th:text="${estimate.status}"></td>
                                             <td>
-												<a href="#" class="openQuoteDetailModal" th:id="${estimate.id}" onclick="showEstimateAll(this.id)">견적 상세 보기</a>
+											    <span th:text="${estimate.status}"></span>&nbsp&nbsp&nbsp
+											    <button class="btn btn-primary" id="statusBtn" th:value="${estimate.id}" style="width:50px; height:30px; font-size:12px;" type="button">변경</button>
+											</td>
+                                            <td>
+											<a href="#" class="openQuoteDetailModal" th:id="${estimate.id}" onclick="showEstimateAll(this.id)">견적 상세 보기</a>
 
 											</td>
                                         </tr>           
@@ -156,7 +159,7 @@
 		        <p>8. 참고 사진: <span class="modal-content" style="width:calc(100% - 20px);" id="referenceFile"></span></p>
 		        <p>9. 참고 URL: <input type="url" id="referenceUrl" ></p>
 		        <p>10. 문의 사항: <textarea id="questions" placeholder="문의 사항을 입력하세요"></textarea></p>
-				<button class="btn btn-danger btn-sm"  onclick="alert('자~ 삭제 로직 만들어봅시다 현수님ㅋㅋ 화이팅')">삭제</button>
+				<button class="btn btn-danger btn-sm" id="deleteBtn">삭제</button>
 		    </div>
 		    
 		    
@@ -220,7 +223,9 @@
 
     <!-- Page level custom scripts -->
     <script src="/js/demo/datatables-demo.js"></script>
-
+	
+	
+	
 </body>
 
 </html>
