http 접근 차단 jskey 추가

--- a/yejo/src/main/resources/templates/main/location.html
+++ b/yejo/src/main/resources/templates/main/location.html
@@ -63,7 +63,7 @@
 <div id="container">
 	<div id="contArea">
 		<div class="sub-title">
-			<h1>ABOUT</h1>
+			<h1>LOCATION</h1>
 		</div>
 		<div class="real-cont">
 			<div class="about wow fadeIn" data-wow-delay="0.3s" data-wow-duration="0.8s">
